tests/diagnostics/catalog/snapshots/ir/IR0048.snap
error[IR0048]: IR_E_MACRO_RECURSION
 --> tests/diagnostics/catalog/sources/ir/IR0048.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0048
  = help: keep IR validation diagnostics structured and catalog-backed
